# chores

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  seed.toml
migrations/20260601000000_initial/: down.sql  up.sql
migrations/20260601150000_photos/: up.sql
migrations/20260602000000_tags/: down.sql  up.sql
migrations/20260602120000_nweeks_offset/: down.sql  up.sql
migrations/20260602130000_people/: down.sql  up.sql
migrations/20260605000000_photo_blobs/: down.sql  up.sql
nix/: module.nix
src/: backup.rs  clear.rs  config.rs  db.rs  main.rs  migrate.rs  pack.rs  photos.rs  schedule.rs  seed.rs  settings.rs  shrink.rs  storybook.rs  task.rs  tasks.rs  unpack.rs
static/: app.css  auto-sleep.js  photo-editor.js  slideshow.js  storybook.html  system.css  text.txt  upload.js
