[package]
name = "chores"
version = "0.1.0"
edition = "2024"
default-run = "chores"

[[bin]]
name = "chores"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/seed.rs"

[[bin]]
name = "clear"
path = "src/clear.rs"

[[bin]]
name = "backup"
path = "src/backup.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
tokio = { version = "1.48.0", features = ["default", "rt-multi-thread"] }
hypertext = "0.12.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "macros", "sqlite" ] }
anyhow = "1.0.100"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4.42"
chrono-tz = "0.10"
dotenvy = { git = "https://github.com/allan2/dotenvy.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9"
image = "0.25"
kamadak-exif = "0.5"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
